syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.filesync.user.grpc";

service UserService {
  rpc CheckQuota(CheckQuotaRequest) returns (QuotaResponse);
  rpc UpdateStorageUsed(UpdateStorageUsedRequest) returns (EmptyResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserDto);
  rpc GetUsersByIds(GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
}

message CheckQuotaRequest {
  string user_id = 1;
  int64 file_size = 2;
}

message QuotaResponse {
  bool has_space = 1;
  int64 available_space = 2;
  int64 storage_used = 3;
  int64 storage_quota = 4;
}

message UpdateStorageUsedRequest {
  string user_id = 1;
  int64 size_delta = 2; // Positive for upload, negative for delete
}

message EmptyResponse {
}

message GetUserByIdRequest {
  string user_id = 1;
}

message UserDto {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}

message GetUsersByIdsResponse {
  repeated UserDto users = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar_url = 4;
  repeated string roles = 5;
  int64 storage_used = 6;
  int64 storage_quota = 7;
  string created_at = 8;
  string updated_at = 9;
}
